<resources>
    <string name="app_name">The Movie</string>
    <string name="application_icon">Application icon</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="highlighted_movie_poster">Highlighted movie poster</string>
    <string name="dummy_movie_title">Doctor Strange in the Multiverse of Madness</string>
    <string name="highlighted_movie_rating">Highlighted movie rating</string>
    <string name="dummy_movie_rating">4.8</string>
    <string name="dummy_movie_information">2022 | Adventure | 2h 6m</string>
    <string name="trending">Trending</string>
    <string name="see_more">See more</string>
    <string name="movie_poster">Movie poster</string>
    <string name="latest">Latest</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="overview">Overview</string>
    <string name="dummy_movie_overview">Dr. Stephen Strange casts a forbidden spell that opens the doorway to the multiverse, including alternate versions of himself, whose threat to humanity is too great for the combined forces of Strange, Wong, and Wanda Maximoff.</string>
    <string name="cast">Cast</string>
    <string name="related_movies">Related Movies</string>
    <string name="dummy_role">Peter Parker / Spider-Man</string>
    <string name="dummy_cast">Tom Holland</string>
    <string name="saved_as_favorite">Saved as favorite</string>
    <string name="deleted_from_favorite">Deleted from favorite</string>
    <string name="error">Error</string>
    <string name="movie_rating">Movie rating</string>
    <string name="invalid_category">Invalid category</string>
    <string name="movie_title">Movie title</string>
    <string name="an_error_occurred">An Error Occurred</string>
    <string name="retry">Retry</string>
    <string name="there_is_no_data">There is no data</string>
</resources>