<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:elevation="4dp"
            android:paddingVertical="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/application_icon"
                android:src="@drawable/ic_the_movie" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/iv_main_poster"
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:contentDescription="@string/highlighted_movie_poster"
            android:scaleType="centerCrop"
            android:src="@drawable/img_dummy_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/poster_mask"
            app:layout_constraintBottom_toBottomOf="@+id/iv_main_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/dummy_movie_title"
            android:textAlignment="center"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_main_information"
            app:layout_constraintEnd_toEndOf="@+id/tv_main_information"
            app:layout_constraintStart_toStartOf="@+id/tv_main_information" />

        <TextView
            android:id="@+id/tv_main_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/dummy_movie_information"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/iv_main_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_main_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/highlighted_movie_rating"
                android:src="@drawable/ic_rating_4" />

            <TextView
                android:id="@+id/tv_main_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dummy_movie_rating" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/trending"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_main_poster"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/tv_trending_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/see_more"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:itemCount="1"
            tools:listitem="@layout/item_movie_horizontal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>