<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:paddingVertical="24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:scrollbarSize="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="48dp">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="560dp"
                android:contentDescription="@string/highlighted_movie_poster"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/poster_mask"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:alpha="0"
                android:fontFamily="@font/montserrat_semibold"
                android:textAlignment="center"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_movie_information"
                app:layout_constraintEnd_toEndOf="@+id/tv_movie_information"
                app:layout_constraintStart_toStartOf="@+id/tv_movie_information" />

            <TextView
                android:id="@+id/tv_movie_information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:alpha="0"
                android:ellipsize="end"
                android:maxLines="3"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/ll_rating_view"
                app:layout_constraintEnd_toEndOf="@+id/ll_rating_view"
                app:layout_constraintStart_toStartOf="@+id/ll_rating_view" />

            <LinearLayout
                android:id="@+id/ll_rating_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="64dp"
                android:alpha="0"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/highlighted_movie_rating"
                    android:src="@drawable/ic_rating_4" />

                <TextView
                    android:id="@+id/tv_movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/dummy_movie_rating" />
            </LinearLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_main_poster"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="32dp"
                android:background="#011B43"
                android:foreground="@drawable/poster_mask"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shimmer_auto_start="true"
                app:shimmer_duration="800"
                app:shimmer_repeat_mode="restart" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/overview"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_movie_poster" />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/cast"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:itemCount="5"
                tools:listitem="@layout/item_movie_cast" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/related_movies"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_detail_cast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_related_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:itemCount="1"
                tools:listitem="@layout/item_movie_horizontal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>